[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-telemetry"
version = "0.1.0"
description = "Gathers telemetry via CAN BUS from a Haltech ECU and writes to a file."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "python-can>=4.3",
]

[project.optional-dependencies]
# Development-only dependencies
dev = [
  "black>=24.0",
]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'